Updated php and forms

--- a/src/partials/_services.html
+++ b/src/partials/_services.html
@@ -6,7 +6,7 @@
         <i class="bi bi-cpu" style="color: rgb(40, 149, 226)"></i>
         <h6>Assistenza hardware/software</h6>
         <p class="neon-blue">
-          Pulizia e/o formattazione e aggiornamento componenti
+          Cambio componenti, pulizia, programmi e assistenza generica
         </p>
       </div>
       <hr />
@@ -14,7 +14,7 @@
         <i class="bi bi-amazon" style="color: rgb(255, 197, 38)"></i>
         <h6>Acquisto e/o assemblaggio</h6>
         <p class="neon-blue">
-          Consulenza, guida all’acquisto, assemblaggio su misura
+          Consulenza, guida all’acquisto e assemblaggio su misura
         </p>
       </div>
       <hr />
@@ -22,7 +22,7 @@
         <i class="bi bi-discord" style="color: rgba(87, 100, 242)"></i>
         <h6>Server discord</h6>
         <p class="neon-blue">
-          Server Discord multicategoria con stanze automatizzate
+          Creazione server Discord multicategoria con stanze automatizzate
         </p>
       </div>
       <hr />
