Finished forms and php functionality, adjusted serviceScroll.js, footer icons, added scrollbar to modals

--- a/src/partials/_presentation.html
+++ b/src/partials/_presentation.html
@@ -2,19 +2,19 @@
   <div class="row">
     <div class="col-xl-6 col-12">
       <h1>Michelegaro.it</h1>
+      
       <p class="size-3">Assistenza tecnica per PC e sistemi informatici.</p>
       <hr style="color: transparent" />
       <p class="size-1">
-        Sono un appassionato di informatica, autodidatta, disponibile a fornire
+        Sono un appassionato di informatica, disponibile a fornire
         supporto tecnico e spiegazioni su misura per le tue esigenze.
       </p>
       <a class="modernButton disabledButton">Curriculum Vitae</a>
       <p>Prossimamente...</p>
       <hr style="color: transparent" />
       <p class="size-1">
-        Scopri tutti i servizi disponibili e le soluzioni che posso offrirti per
-        ottimizzare, migliorare o realizzare i tuoi progetti informatici. Ogni
-        attività viene valutata e concordata singolarmente con il cliente.
+        Scopri le soluzioni che posso offrirti per
+        ottimizzare, migliorare o realizzare i tuoi progetti informatici.
       </p>
       <a class="modernButton" href="#serviceSection"
         >Vai ai servizi
