--- a/src/partials/_services.html
+++ b/src/partials/_services.html
@@ -1,7 +1,7 @@
 <section id="serviceSection" class="my-3 py-3">
   <h2>Servizi</h2>
-  <div class="row bordered text-center">
-    <div class="serviceSelectionBox col-xl-6 col-12">
+  <div class="row bordered">
+    <div class="serviceSelectionBox text-center col-xl-6 col-12">
       <div class="modernButton selectableButton serviceButton">
         <i class="bi bi-cpu" style="color: rgb(40, 149, 226)"></i>
         <h6>Assistenza hardware/software</h6>
@@ -33,22 +33,22 @@
       </div>
     </div>
     <div class="selectedServiceBox col-xl-6 col-12 mt-5 mt-md-0">
-      <h3 class="serviceTitle">Seleziona un servizio...</h3>
+      <h3 class="serviceTitle text-center">Seleziona un servizio...</h3>
       <hr style="color: transparent" />
       <hr />
-      <div class="selectedServiceOverview">
-        <p class="serviceDescription size-1 d-none"></p>
-        <hr style="color: transparent" />
-        <hr style="color: transparent" />
+      <div class="selectedServiceOverview text-center-md-down">
+        
         <p class="serviceStartButton modernButton d-none">
           Richiedi un preventivo
         </p>
+        <p class="serviceDescription size-1 d-none"></p>
+        <hr style="color: transparent" />
+        <hr style="color: transparent" />
         <p class="serviceCostDisclaimer d-none">
-          Eventuali compensi saranno concordati privatamente con il cliente in
-          base alla complessità del lavoro.
+          Eventuali compensi saranno concordati privatamente.
         </p>
       </div>
-      <div class="selectedServiceForm text-start"></div>
+      <div class="selectedServiceForm"></div>
     </div>
   </div>
 </section>
