--- a/src/scss/_animations.scss
+++ b/src/scss/_animations.scss
@@ -1,4 +1,7 @@
-// /* ===== Fade In Up ===== */
+// .fade-in-up {
+//   animation: fadeInUp 0.8s ease forwards;
+// }
+
 // @keyframes fadeInUp {
 //   0% {
 //     opacity: 0;
@@ -8,46 +11,4 @@
 //     opacity: 1;
 //     transform: translate3d(0, 0, 0);
 //   }
-// }
-
-// .animate__fadeInUp {
-//   animation-name: fadeInUp;
-//   animation-duration: 0.75s;
-//   animation-fill-mode: both;
-// }
-
-// /* ===== Fade In Right ===== */
-// @keyframes fadeInRight {
-//   0% {
-//     opacity: 0;
-//     transform: translate3d(40px, 0, 0);
-//   }
-//   100% {
-//     opacity: 1;
-//     transform: translate3d(0, 0, 0);
-//   }
-// }
-
-// .animate__fadeInRight {
-//   animation-name: fadeInRight;
-//   animation-duration: 0.75s;
-//   animation-fill-mode: both;
-// }
-
-// /* ===== Fade Out Left ===== */
-// @keyframes fadeOutLeft {
-//   0% {
-//     opacity: 1;
-//     transform: translate3d(0, 0, 0);
-//   }
-//   100% {
-//     opacity: 0;
-//     transform: translate3d(-40px, 0, 0);
-//   }
-// }
-
-// .animate__fadeOutLeft {
-//   animation-name: fadeOutLeft;
-//   animation-duration: 0.75s;
-//   animation-fill-mode: both;
 // }
