--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -50,6 +50,7 @@ $bootstrap-icons-font-display: swap;
 
 // / Other scss files */
 @import "_variables";
+@import "_mobile";
 
 // / Custom style SCSS */
 @import "_main";
