--- a/src/partials/_footer.html
+++ b/src/partials/_footer.html
@@ -1,6 +1,9 @@
 <div class="nav row">
   <div class="col-xl-3 col-12">
-    <p>Copyright © 2026 Michele Garofalo. Tutti i diritti riservati.</p>
+    <p>
+      Copyright © 2026 Michele Garofalo.<br>
+      Tutti i diritti riservati.
+    </p>
     <p>
       Prestazione occasionale.
     </p>
@@ -10,10 +13,10 @@
     <a href="#termsConditionsModal" data-bs-toggle="modal"
       >Termini e condizioni</a>
     <br>
-    <a href="#privacyInfoModal" data-bs-toggle="modal">Privacy</a>
+    <a href="#privacyInfoModal" data-bs-toggle="modal">Informativa sulla privacy</a>
   </div>
   <div class="col-xl-3 col-12">
-    <a href="https://github.com/rhaastrake" target="_blank">GitHub</a><br />
-    <a href="https://www.linkedin.com/in/michele-garofalo-1966302b6/" target="_blank">LinkedIn</a><br />
+    <a href="https://github.com/rhaastrake" target="_blank"><i class="bi bi-github"></i> GitHub</a><br />
+    <a href="https://www.linkedin.com/in/michele-garofalo-1966302b6/" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a><br />
   </div>
 </div>
