--- a/src/404.njk
+++ b/src/404.njk
@@ -13,6 +13,7 @@
     <main>
       <h1>Michelegaro.it</h1>
       <h2>Errore 404 - Pagina non trovata</h2>
+      <h3>Torna indietro o clicca <a href="michelegaro.it">qui</a></h3>
     </main>
     <footer></footer>
   </body>
