--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -43,9 +43,11 @@ permalink: /about/
 
   <body>
     {% include "_header.html" %}
-    <main>{% include "_CVSection.html" %}</main>
-    {% include "_footer.html" %} {% include "_bugReportModal.html" %} {% include
-    "_privacyInfoModal.html" %}
+    {% include "_footer.html" %}
+
+    {% include "_privacyInfoModal.html" %}
+    {% include "_termsConditionsModal.html" %}
+    {% include "_bugReportModal.html" %}
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
