Adjusted agbout and news .njk

--- a/src/pages/news.njk
+++ b/src/pages/news.njk
@@ -44,6 +44,10 @@ permalink: /news/
 
     {% include "../partials/_footer.html" %}
 
+    {% include "_privacyInfoModal.html" %}
+    {% include "_termsConditionsModal.html" %}
+    {% include "_bugReportModal.html" %}
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
