Vertically gapped Curriculum and Notizie buttons

--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -5,7 +5,7 @@
   <div class="nav-links">
     <a
       class="modernButton disabledButton"
-      ><i class="bi bi-file-earmark-person"> Il mio CV</i></a
+      ><i class="bi bi-file-earmark-person"> Curriculum</i></a
     >
     <a
       class="modernButton disabledButton"
@@ -55,7 +55,7 @@
 
     <a
       class="modernButton disabledButton"
-      ><i class="bi bi-file-earmark-person"> Il mio CV</i></a
+      ><i class="bi bi-file-earmark-person"> Curriculum</i></a
     >
     <a
       class="modernButton disabledButton"
