--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -32,6 +32,11 @@
     text-align: center !important;
   }
 
+  .nav-links a {
+    margin-top: 3px;
+    margin-bottom: 3px;
+  }
+
    .nav-external-links, .nav-extra-links {
     display: none;
   }
