--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -17623,6 +17623,10 @@ h2, .h2 {
   .text-center-md-down {
     text-align: center !important;
   }
+  .nav-links a {
+    margin-top: 3px;
+    margin-bottom: 3px;
+  }
   .nav-external-links, .nav-extra-links {
     display: none;
   }
