--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MicheleGaro.it - Homepage</title>
     <meta
-      name="description"
+      name="Michelegaro.it"
       content="Assistenza tecnica per PC e sistemi informatici."
     />
 
