--- a/src/partials/_footer.html
+++ b/src/partials/_footer.html
@@ -1,22 +1,36 @@
 <div class="nav row">
-  <div class="col-xl-3 col-12">
+  <div class="col-xl-3 col-12 mb-3">
+    <h5>Copyright</h5>
     <p>
-      Copyright © 2026 Michele Garofalo.<br>
+      Copyright © 2026 Michele Garofalo.<br />
       Tutti i diritti riservati.
     </p>
-    <p>
-      Prestazione occasionale.
-    </p>
+    <p>Prestazione occasionale.</p>
   </div>
-  <div class="col-xl-3 col-12">
-    <a href="#serviceSection">Servizi</a><br />
+  <div class="col-xl-3 col-12 mb-3">
+    <h5>Pagine</h5>
+    <a href="" target="_blank">Homepage</a>
+  </div>
+  <div class="col-xl-3 col-12 mb-3">
+    <h5>Note legali</h5>
     <a href="#termsConditionsModal" data-bs-toggle="modal"
-      >Termini e condizioni</a>
-    <br>
-    <a href="#privacyInfoModal" data-bs-toggle="modal">Informativa sulla privacy</a>
+      >Termini e condizioni</a
+    >
+    <br />
+    <a href="#privacyInfoModal" data-bs-toggle="modal"
+      >Informativa sulla privacy</a
+    >
+    <br />
   </div>
-  <div class="col-xl-3 col-12">
-    <a href="https://github.com/rhaastrake" target="_blank"><i class="bi bi-github"></i> GitHub</a><br />
-    <a href="https://www.linkedin.com/in/michele-garofalo-1966302b6/" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</a><br />
+  <div class="col-xl-3 col-12 mb-3">
+    <h5>Link esterni</h5>
+    <a href="https://github.com/rhaastrake" target="_blank"
+      ><i class="bi bi-github"></i> GitHub</a
+    ><br />
+    <a
+      href="https://www.linkedin.com/in/michele-garofalo-1966302b6/"
+      target="_blank"
+      ><i class="bi bi-linkedin"></i> LinkedIn</a
+    ><br />
   </div>
 </div>
