Added last modify to privacy and terms and added things to curriculum page

--- a/src/partials/_about.html
+++ b/src/partials/_about.html
@@ -33,8 +33,7 @@
       <div id="profile" class="mb-4">
         <h2>Profilo</h2>
         <p>
-          Informatico con esperienza in assistenza hardware/software, sviluppo
-          web e supporto tecnico.
+          Sono un appassionato di informatica con una solida formazione autodidatta, maturata in anni di studio costante della programmazione in diverse tecnologie e del funzionamento dell’hardware. Ho sviluppato competenze pratiche nella risoluzione dei problemi, nell’analisi tecnica e nell’apprendimento rapido di nuovi strumenti, cercando di realizzare dei piccoli progetti per interesse personale.
         </p>
       </div>
 
@@ -73,7 +72,7 @@
           </p>
         </div>
         <div>
-          <h6>Operaotore call center (OutBound)</h6>
+          <h6>Operatore call center (OutBound)</h6>
           <small class="text-muted">Giu 2025 | Area Web S.R.L. | Bari</small>
           <p>
             Mi sono occupato di chiamare le aziende di tutta Italia tramite un
@@ -136,15 +135,6 @@
           <h6>I.P.S.S.A.R. Armando Perotti</h6>
           <small class="text-muted">Set 2015 - Giu 2019</small>
         </div>
-      </div>
-
-      <div id="projects" class="mb-4">
-        <h2>Progetti</h2>
-        <ul>
-          <li>Siti web statici responsive</li>
-          <li>Dashboard admin</li>
-          <li>Server Discord personalizzati</li>
-        </ul>
       </div>
 
       <div id="contacts">
