--- a/src/partials/_termsConditionsModal.html
+++ b/src/partials/_termsConditionsModal.html
@@ -16,6 +16,9 @@
       </div>
 
       <div class="modal-body">
+        <p class="text-muted small mt-3">
+          Ultimo aggiornamento: 27 gennaio 2026
+        </p>
         <h4>Informazioni generali</h4>
         <p>
           I servizi offerti sono forniti in forma di prestazione occasionale, da
