Enabled curriculum button

--- a/src/partials/_header.html
+++ b/src/partials/_header.html
@@ -6,7 +6,7 @@
     <a href="/" class="modernButton"
       ><i class="bi bi-house-door"> Homepage</i></a
     >
-    <a class="modernButton disabledButton"
+    <a href="/about" class="modernButton"
       ><i class="bi bi-file-earmark-person"> Curriculum</i></a
     >
     <a class="modernButton disabledButton"
@@ -53,7 +53,7 @@
     ><i class="bi bi-house-door"> Homepage</i></a
   >
 
-  <a class="modernButton disabledButton"
+  <a href="/about" class="modernButton"
     ><i class="bi bi-file-earmark-person"> Curriculum</i></a
   >
   <a class="modernButton disabledButton"
