Unlcoekd cv page and added download CV button

--- a/src/partials/_about.html
+++ b/src/partials/_about.html
@@ -2,7 +2,12 @@
   <div class="row">
     <aside class="col-md-3 col-lg-2 sidebar p-3">
       <div class="text-center mb-4">
-        <img src="/assets/images/profile-pic.webp"  alt="" class="rounded-circle mb-2" width="90" />
+        <img
+          src="/assets/images/profile-pic.webp"
+          alt=""
+          class="rounded-circle mb-2"
+          width="90"
+        />
         <h5 class="mb-0">Michele Garofalo</h5>
         <small class="text-muted">Programmatore - Tecnico informatico</small>
       </div>
@@ -30,12 +35,19 @@
     </aside>
 
     <main class="col-md-9 col-lg-10 px-4 py-3">
-      
-      <p style="font-size: 3rem;">La pagina è ancora incompleta</p>
+      <p style="font-size: 3rem">La pagina è ancora incompleta</p>
+      <a href="/assets/files/Michele_Garofalo_CV.pdf" download>
+        <p class="modernButton">Scarica CV</p>
+      </a>
       <div id="profile" class="mb-4">
         <h2>Profilo</h2>
         <p>
-          Sono un appassionato di informatica con una solida formazione autodidatta, maturata in anni di studio costante della programmazione in diverse tecnologie e del funzionamento dell’hardware. Ho sviluppato competenze pratiche nella risoluzione dei problemi, nell’analisi tecnica e nell’apprendimento rapido di nuovi strumenti, cercando di realizzare dei piccoli progetti per interesse personale.
+          Sono un appassionato di informatica con una solida formazione
+          autodidatta, maturata in anni di studio costante della programmazione
+          in diverse tecnologie e del funzionamento dell’hardware. Ho sviluppato
+          competenze pratiche nella risoluzione dei problemi, nell’analisi
+          tecnica e nell’apprendimento rapido di nuovi strumenti, cercando di
+          realizzare dei piccoli progetti per interesse personale.
         </p>
       </div>
 
