--- a/src/partials/_presentation.html
+++ b/src/partials/_presentation.html
@@ -8,7 +8,7 @@
       <p class="size-1">
         Sono disponibile a fornire supporto tecnico e spiegazioni su misura per le tue esigenze.
       </p>
-      <a class="modernButton">Curriculum Vitae</a>
+      <a href="/about" class="modernButton">Curriculum Vitae</a>
       <hr style="color: transparent" />
       <p class="size-1">
         Scopri le soluzioni per realizzare e ottimizzare i tuoi progetti informatici.
