--- a/src/pages/about.njk
+++ b/src/pages/about.njk
@@ -63,10 +63,9 @@ permalink: /about/
     <link rel="stylesheet" href="/css/custom.css" />
     <script type="module" src="/js/service.js" defer></script>
     <script type="module" src="/js/form.js" defer></script>
-    <script type="module" src="/js/textAreaAutoExpand.js" defer></script>
     <script type="module" src="/js/normalizePhoneNumber.js" defer></script>
     <script type="module" src="/js/disabledButtons.js" defer></script>
-    <script type="module" src="/js/serviceScroll.js" defer></script>
     <script type="module" src="/js/burger.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
   </body>
 </html>
