--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -27,7 +27,7 @@
 // @import "../../node_modules/bootstrap/scss/buttons";
 @import "../../node_modules/bootstrap/scss/transitions";
 @import "../../node_modules/bootstrap/scss/dropdown";
-@import "../../node_modules/bootstrap/scss/card";
+// @import "../../node_modules/bootstrap/scss/card";
 // @import "../../node_modules/bootstrap/scss/badge";
 @import "../../node_modules/bootstrap/scss/accordion";
 @import "../../node_modules/bootstrap/scss/modal";
