--- a/src/partials/_cvSidebar.html
+++ b/src/partials/_cvSidebar.html
@@ -1,7 +1,7 @@
 <aside class="col-md-3 col-lg-2 sidebar p-3">
   <div class="text-center my-3">
     <img
-      src="/assets/images/profile-pic.webp"
+      src="/assets/images/profile-pic.png"
       alt=""
       class="rounded-circle mb-2"
       width="90"
