Added keywords to pages

--- a/src/404.njk
+++ b/src/404.njk
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    {% set partials = "src/partials/" %}
+    {% set pageKey = 'homepage' | lower %}
+    {% set pageData = site[homepage] %}
+
+    <title>{{ pageData.seo.title or title or site.title }}</title>
+    <meta name="description" content="{{ pageData.seo.description or site.description }}">
+    <meta name="keywords" content="{{ pageData.seo.keywords }}">
+
+
     <meta charset="UTF-8" />
-    <meta
-      name="description"
-      content="WebFixer.it: Assistenza tecnica per PC e sistemi informatici."
-    />
-    <title>WebFixer - 404</title>
-    <meta
-      name="description"
-      content="Assistenza tecnica per PC e sistemi informatici."
-    />
     <meta property="og:title" content="WebFixer.it - 404" />
-<meta property="og:description" content="Assistenza tecnica per PC e sistemi informatici." />
-<meta property="og:image" content="{#URL_DI_UN_ANTEPRIMA_LOGOTIPO.jpg#}" />
-<meta property="og:url" content="https://www.webfixer.it/news" />
+    <meta property="og:description" content="Assistenza tecnica per PC e sistemi informatici." />
+    <meta property="og:image" content="{#URL_DI_UN_ANTEPRIMA_LOGOTIPO.jpg#}" />
+    <meta property="og:url" content="https://www.webfixer.it/news" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Asimovian&family=Cal+Sans&family=Edu+SA+Hand:wght@400..700&family=IM+Fell+English+SC&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Quando&family=Rationale&family=Tillana:wght@400;500;600;700;800&display=swap"
@@ -37,7 +38,6 @@
       href="favicon.ico"
       type="image/x-icon"
     />
-    {% set partials = "src/partials/" %}
   </head>
   <body>
     <header>
